# cmaketemplate

./: .gitignore  CMakeLists.txt  headerconfig.h.in  readme.md
app/: CMakeLists.txt  reader.cpp
include/: CMakeLists.txt  echo.h  file2.h  source_file.h
src/: CMakeLists.txt  echo.cpp  file2.cpp  source_file.cpp
tests/: CMakeLists.txt  catch.h  test_cmake_demo.cpp
